fix header dropdown overflow

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -146,6 +146,7 @@
 		opacity: 0;
 		max-height: 0;
 		transition: all 0.5s ease;
+		overflow: hidden;
 
 		&.active {
 			opacity: 1;
